# pgen

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
pgen-cli/: Cargo.toml
pgen-cli/src/: main.rs
pgen-core/: Cargo.toml
pgen-core/src/: error.rs  lib.rs  pattern.rs  wordlist.rs
src/: main.rs  pgen.cpp  random_help.cpp  random_help.h  wordlists.cpp  wordlists.h
wordlists/: short_words.txt  symbols.txt
