[package]
name = "pgen-core"
version = "0.1.0"
authors = ["Sean Newman <sxn6296@rit.edu>"]
edition = "2018"
description = "Implementation of the core functionality for password generators."
license = "MIT"
repository = "https://github.com/s-newman/pgen"
readme = "../README.md"
keywords = ["password", "passphrase", "generator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3.1"
num-traits = "0.2.14"
rand = "0.7.3"
thiserror = "1.0.22"
